codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_preserves_status_line.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask a follow-up question                                                      "
"                                                                                "
"  sol56             Side from main thread · ctrl+/ to switch · ctrl+c to close  "
